# cyclone-workflow

./: .env.example  .gitignore  .version.txt  AGENTS.md  CLAUDE.md  README.md  WORKLOG.md  astro.config.mjs  deploy.sh  dispatch-148.sh  issue-17.md  issues-status.md  package-lock.json  package.json  plan0.md  playwright.config.ts  vitest.config.ts  wrangler.toml
.attachments/issue-27/: issue-27-e2e.webm
.github/workflows/: cloudflare-pages-deploy.yml  tauri-release.yml
.omc/state/: idle-notif-cooldown.json
desktop_app/: README.md
desktop_app/src-tauri/: Cargo.toml  tauri.conf.json
desktop_app/src-tauri/icons/: icon.icns
e2e/: announcements.spec.ts  auth.spec.ts  demo-tour.spec.ts  homepage.spec.ts  issue-27.spec.ts  lambdatest-setup.ts  messages-auth.spec.ts  nav-rwd.spec.ts  smoke.spec.ts
issues/: README.md
issues/15-dark-light-theme/: findings.md  progress.md  task_plan.md
issues/22-oauth-duplicate-accounts/: findings.md  progress.md  task_plan.md
issues/36-file-based-memory/: findings.md  progress.md  task_plan.md
issues/47-messages-auth/: findings.md  progress.md  task_plan.md
issues/49-points-system/: findings.md  progress.md  task_plan.md
issues/5-privacy-consent/: findings.md  progress.md  task_plan.md
issues/98-codebase-health/: findings.md  progress.md  (+2 more)
public/: robots.txt
scripts/: audit-left-join.ts  bump-version.ts  encrypt-qa.ts  generate-images.ts
tests/: api-members-security.test.ts
wiki/: API.md  Architecture.md  Claude-Code-101.md  Database.md  Environment.md  Features.md  Gantt.md  Home.md  Meeting-20260413.md  Roles.md
(+134 files in other folders)
