[package]
name = "cyclone-workflow"
version = "0.1.0"
description = "AI 工作流共學團桌面版"
authors = ["cyclone-tw"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
